--- a/cities.html
+++ b/cities.html
@@ -23,6 +23,8 @@
   <li>Detroit</li>
   <li>Eldorado</li>
   <li>Fillmore</li>
+  <li>Greenville</li>
+  <li>Houston</li>
 <!-- ALPHABET END -->
 </ul>
 </div>
