--- a/cities.html
+++ b/cities.html
@@ -25,7 +25,7 @@
   <li>Fillmore</li>
   <li>Greenville</li>
   <li>Houston</li>
-  <li>India</li>
+  <li>Illinois</li>
 <!-- ALPHABET END -->
 </ul>
 </div>
