--- a/pilots.html
+++ b/pilots.html
@@ -25,7 +25,7 @@
   <li>Foxtrot</li>
   <li>Golf</li>
   <li>Hotel</li>
-  <li>Illinois</li>
+  <li>India</li>
 <!-- ALPHABET END -->
 </ul>
 </div>
